project(ParaViewPlugins) 
cmake_minimum_required(VERSION 3.9)
FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(HDF5)
include_directories(${HDF5_INCLUDE_DIR})

add_subdirectory("HDF5Reader")
add_subdirectory("Voronoi")
add_subdirectory("CrackAlgorithms")
add_subdirectory("HDF5ReaderMultiBlock")
add_subdirectory("Porocity")
add_subdirectory("IsotropicRemeshingFilter")
add_subdirectory("MicroStructure")
add_subdirectory("HDF5ReaderConvex")
add_subdirectory("HDF5ReaderPeridynamics")
add_subdirectory("HDF5ReaderBonds")
add_subdirectory("HDF5ReaderTetraConvex")
add_subdirectory("HDF5ReaderTetraBonds")

add_subdirectory("McsdemReader")
