
project(HDF5Reader)

cmake_minimum_required(VERSION 3.9)
FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_PARAVIEW_PLUGIN(HDF5Reader "1.0"
SERVER_MANAGER_XML HDF5Reader_Server.xml
SERVER_MANAGER_SOURCES HDF5Reader.cxx)
target_link_libraries(HDF5Reader LINK_PRIVATE vtksys  -lstdc++fs )
